# abduction-dissociation

./: .gitignore  CITATION.cff  Dockerfile  README.md  conftest.py  pyproject.toml  reproduce.sh  requirements.txt
.github/workflows/: ci.yml
experiments/: ca_abduction_anthropic.py  ca_abduction_llm.py  ca_abduction_tool.py  ca_forward_llm.py  ca_graded_metric.py  ca_inverted_wall.py  ca_load_bearing.py  ca_scaling_llm.py  ca_scaling_ours.py  ca_seed_sweep.py  significance.py  sok_abduction_llm.py  sok_control_astar.py  sok_control_llm.py  sok_size_sweep.py
paper/: checklist.tex  fig_degrade.tex  fig_dissociation.tex  fig_domains.tex  fig_example.tex  fig_reasoner.tex  fig_wall.tex  fig_widens.tex  figures.tex  main.tex  refs.bib
paper/data/: degrade.csv  wall.csv  widens.csv
pce/: __init__.py  llm.py
pce/ca/: __init__.py  env.py  estimate.py  headtohead.py  planner.py  rule.py
pce/sok/: __init__.py  abduce.py  env.py  headtohead.py  planner.py  rule.py
results/: ca018.jsonl  ca018_high.jsonl  ca021_forward.jsonl  ca_opus_abduction.jsonl  ca_opus_forward.jsonl  ca_opus_tool.jsonl  sok_control.jsonl
tests/: test_ca_estimate.py  test_sok_abduce.py
